--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
     <div class="container">
         <div class="logo">Neo Kiku Studios</div>
         <div class="tagline">Digital Dreams, Analog Hearts</div>
-        <div class="chrysanthemum">🌸⚡</div>
+        <div class="chrysanthemum">🌼</div>
         <div class="description">
-            Cyberpunk storytelling with chrysanthemum soul.<br>
-            Where tradition meets tomorrow through authentic human narratives.
         </div>
         <div class="social-links">
             <a href="https://youtube.com/@neokiku" class="social-link">YouTube</a>
