--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">Neo Kiku Studios</div>
-            <div>Digital Dreams, Analog Hearts 🌸⚡</div>
+            <div>Digital Dreams, Analog Hearts 🌼</div>
         </div>
         <div class="content">
             <h2>About Neo Kiku Studios</h2>
