--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         <div class="description">
         </div>
         <div class="social-links">
-            <a href="https://youtube.com/@neokiku" class="social-link">YouTube</a>
-            <a href="https://instagram.com/neokiku" class="social-link">Instagram</a>
-            <a href="https://tiktok.com/@neokiku" class="social-link">TikTok</a>
-            <a href="https://twitter.com/neokiku" class="social-link">Twitter</a>
+            <a href="https://youtube.com/@neokikustudios" class="social-link">YouTube</a>
+            <a href="https://instagram.com/neokikustudios" class="social-link">Instagram</a>
+            <a href="https://tiktok.com/@neokikustudios" class="social-link">TikTok</a>
+            <a href="https://twitter.com/neokikustudios" class="social-link">Twitter</a>
             <a href="https://reddit.com/u/neokiku" class="social-link">Reddit</a>
-            <a href="https://facebook.com/neokiku" class="social-link">Facebook</a>
+            <a href="https://facebook.com/neokikustudios" class="social-link">Facebook</a>
         </div>
     </div>
 </body>
